# sas2

./: .cursorrules  .gitignore  Cargo.toml  MIGRATION_SUMMARY.md  README.md  check_md3_bounds  check_md3_bounds.rs  q3-resources
maps/: 0-arena.json  0-arena_navgraph.json  1-arena.json  1-arena_navgraph.json  2-arena.json  2-arena_navgraph.json  990-arena.json  990-arena_navgraph.json  defrag_run.json  defrag_run_defrag.json  defrag_run_navgraph.json  my_arena.json  my_arena_navgraph.json  new_map.json  new_map2.json  new_map2_navgraph.json  new_map_1.json  new_map_1_navgraph.json  new_map_navgraph.json  shader_test.json  shader_test_navgraph.json
src/: anim.rs  app.rs  console.rs  game_loop.rs  lib.rs  loader.rs  main.rs  math.rs  renderer.rs  resource_path.rs  shaders.rs
src/audio/: events.rs  mod.rs
src/engine/: anim.rs  loader.rs  math.rs  md3.rs  mod.rs  renderer.rs  shaders.rs
src/engine/renderer/: crosshair.rs  mod.rs  shadows.rs  types.rs
src/game/: awards.rs  camera.rs  combat.rs  constants.rs  game_state.rs  hitscan.rs  items.rs  lighting.rs  map.rs  map_loader.rs  menu.rs  mod.rs  particle.rs  player.rs  weapon.rs  world.rs
src/game/core/: camera.rs  mod.rs  player.rs  world.rs
src/game/effects/: mod.rs  (+1 more)
src/input/: mod.rs
src/render/: buffers.rs  crosshair.rs  debug.rs  layouts.rs  lightmap.rs  map_meshes.rs  md3_renderer.rs  menu_renderer.rs  mod.rs  particles.rs  pipelines.rs  shadows.rs  text_renderer.rs  textures.rs  textures_tile.rs  tile_occlusion.rs  types.rs  wgpu_renderer.rs
src/shaders/: crosshair.wgsl  menu_fire.wgsl  text.wgsl
(+16 files in other folders)
