[package]
name = "sas2"
version = "0.1.0"
edition = "2021"

[lib]
name = "sas2"
path = "src/lib.rs"

[dependencies]
wgpu = "0.20"
winit = "0.30"
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.24"
pollster = "0.3"
image = "0.24"
rand = "0.8"
kira = "0.9"
fontdue = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"